--- a/app/views/admin/leads/index.html.haml
+++ b/app/views/admin/leads/index.html.haml
@@ -39,6 +39,6 @@
         %td= lead.name
         %td= lead.email
         %td= lead.phone
-        %td= lead.prospected_at
-        %td= lead.enrolled_at
-        %td= lead.created_at
+        %td= I18n.l lead.prospected_at, format: :short if lead.prospected_at?
+        %td= I18n.l lead.enrolled_at, format: :short if lead.enrolled_at?
+        %td= I18n.l lead.created_at, format: :short if lead.created_at?
