--- a/app/views/home/subscribe.html.haml
+++ b/app/views/home/subscribe.html.haml
@@ -67,14 +67,14 @@
             / = c.input :cpf, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
             = c.input :card_holder_name, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
             = c.input :number, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
-            = c.input :cvv, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }            
+            = c.input :security_code, input_html: { class: "input-1", maxlength: 3 }, wrapper_html: { class: "wrapper" }            
             = c.input :expiration_date, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }, placeholder: 'MM/AAAA'     
             = c.input :installments, as: :select, collection: options_for_select((1..12).to_a, 1), input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }       
             #installments-placeholder
             / = l.semantic_fields_for :credit_card, validate: false do |c|
             /   = c.input :card_holder_name, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
             /   = c.input :number, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
-            /   = c.input :cvv, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }            
+            /   = c.input :security_code, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }            
             /   = c.input :expiration_date, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }            
             /   = c.input :installments, as: :select, collection: options_for_select((1..12).to_a), input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
         %fieldset#button
