--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -31,6 +31,8 @@
               .nav-collapse.collapse
                 %ul.nav
                   %li.active
+                    = link_to 'Dashboard', admin_root_path
+                  %li
                     = link_to 'Leads', admin_leads_path
                   %li
                     = link_to 'Vouchers', admin_vouchers_path
