--- a/app/views/admin/vouchers/index.html.haml
+++ b/app/views/admin/vouchers/index.html.haml
@@ -1,7 +1,7 @@
 - content_for :title, 'Vouchers'
 = render 'admin/shared/navbar'
   
-%table.table
+%table.table.table-hover
   %thead
     %tr
       %th= check_box_tag ''
