--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -37,10 +37,23 @@
                   %li
                     = link_to 'Vouchers', admin_vouchers_path
                 %ul.nav.pull-right
-                  %li
-                    = link_to 'editar', edit_user_registration_path
-                  %li
-                    = link_to 'sair', destroy_user_session_path, :method => :delete            
+                  %li.dropdown
+                    %a.dropdown-toggle{href: '#', "data-toggle" => "dropdown"} 
+                      %span
+                        = current_user.email
+                        / %i
+                        /   = "(#{current_user.role})"
+                      %b.caret
+                    %ul.dropdown-menu
+                      %li
+                        = link_to 'Editar', edit_user_registration_path
+                      %li.divider
+                      %li
+                        = link_to 'Sair', destroy_user_session_path, :method => :delete
+                  / %li
+                  /   = link_to 'editar', edit_user_registration_path
+                  / %li
+                  /   = link_to 'sair', destroy_user_session_path, :method => :delete            
       .container
         = yield
 
