--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -34,7 +34,7 @@
                   %li.active
                     = link_to 'Dashboard', admin_root_path
                   %li
-                    = link_to 'Leads', admin_leads_path
+                    = link_to 'Leads', admin_leads_path(pending: true)
                   %li
                     = link_to 'Vouchers', admin_vouchers_path
                 %ul.nav.pull-right
