--- a/app/views/admin/vouchers/_search.html.haml
+++ b/app/views/admin/vouchers/_search.html.haml
@@ -1,4 +1,17 @@
-= form_tag search_admin_vouchers_path, method: 'POST' do |f|
-  .input-append
-    = text_field_tag "q[code_cont]", nil, placeholder: "Código do voucher"
-    %button.btn{:type => "submit"} Buscar
+.accordion
+  .accordion-group
+    #accordion2.accordion-heading
+      %a.accordion-toggle{"data-toggle" => "collapse", "data-parent" => "#accordion2", "href" => "#collapseOne"}
+        Filtros
+    #collapseOne.accordion-body.collapse.in
+      .accordion-inner
+        = form_tag search_admin_vouchers_path, method: 'POST' do |f|
+          .input-append
+            = text_field_tag "q[code_cont]", nil, placeholder: "Código do voucher"
+            %button.btn{:type => "submit"} Buscar
+          
+/ = form_tag search_admin_vouchers_path, method: 'POST' do |f|
+/   .input-append
+/     / = text_field_tag "q[code_cont]", nil, placeholder: "Código do voucher"
+/     = text_field_tag "q[status_eq]", nil
+/     %button.btn{:type => "submit"} Buscar
