--- a/app/views/admin/vouchers/index.html.haml
+++ b/app/views/admin/vouchers/index.html.haml
@@ -16,6 +16,7 @@
   %thead
     %tr
       %th= check_box_tag ''
+      %th= sort_link(@search, :lead_name, "Nome")
       %th Código
       %th= sort_link(@search, :status, "Total")
       %th= sort_link(@search, :status, "Status")
@@ -23,6 +24,7 @@
   - @vouchers.each do |voucher|
     %tr{"data-url" => admin_voucher_path(voucher)}
       %td= check_box_tag ''
+      %td= voucher.lead.name
       %td= voucher.code
       %td= number_to_currency voucher.total
       %td
