--- a/app/views/admin/leads/_navbar.html.haml
+++ b/app/views/admin/leads/_navbar.html.haml
@@ -6,14 +6,21 @@
           %span.icon-bar
           %span.icon-bar
           %span.icon-bar
-        = link_to (yield :title), admin_leads_path(pending: true), class: 'brand'
+        = link_to 'Leads', admin_leads_path(pending: true), class: 'brand'
         /%a.brand{href:"#"}= yield :title
+        / %ul.nav
+        /   %li= link_to 'Exportar para Excel', admin_leads_path(params.merge(:format => :csv))
         .nav-collapse
           %ul.nav.pull-right
             / %li.active
             /   %a{href:"#"} Home
-            / %li
-            /   %a{href:"#"} Home
+            %li.dropdown
+              %a.dropdown-toggle{href: '#', "data-toggle" => "dropdown"} 
+                Opções
+                %b.caret
+              %ul.dropdown-menu
+                %li
+                  = link_to 'Exportar para Excel', admin_leads_path(params.merge(:format => :csv))
             %li.dropdown
               %a.dropdown-toggle{href: '#', "data-toggle" => "dropdown"} 
                 Items selecionados
@@ -26,6 +33,3 @@
                 %li
                   = link_to 'Desmarcar como prospectado', prospect_admin_leads_path, id: 'bulk_prospect', class: ['bulk_action']
                   %a{href: '#'} Matricular
-                %li.divider
-                %li
-                  = link_to 'Exportar para Excel', admin_leads_path(params.merge(:format => :csv))
