--- a/app/views/admin/vouchers/_navbar.html.haml
+++ b/app/views/admin/vouchers/_navbar.html.haml
@@ -11,7 +11,7 @@
           %ul.nav.pull-right
             %li.dropdown
               %a.dropdown-toggle{href: '#', "data-toggle" => "dropdown"} 
-                Items selecionados
+                Opções
                 %b.caret
               %ul.dropdown-menu
                 %li
