--- a/app/views/admin/dashboard/index.html.haml
+++ b/app/views/admin/dashboard/index.html.haml
@@ -1,6 +1,34 @@
-/ = form_tag search_admin_vouchers_path, method: 'POST' do |f|
-/   .input-append
-/     = text_field_tag "q[code_cont]", nil, placeholder: "Código do voucher"
-/     %button.btn{:type => "submit"} Buscar
-
 = render 'admin/vouchers/search'
+
+.row
+  .span4
+    %table.table.table-bordered
+      %thead
+        %tr
+          %th Posição
+          %th Franqueado
+      %tbody
+      - Unity.all.each_with_index do |unity, index|
+        %tr
+          %td= index + 1
+          %td= unity.name
+  .span8
+    #chart{"style"=>"width: 600px; height: 400px;"}
+    
+/ = current_user.vouchers.where(status: 'Aprovado').sum(:total)
+
+:javascript
+
+  var chartData = [{
+      status: "Aprovados",
+      total: "#{current_user.vouchers.where(status: 'Aprovado').sum(:total)}",
+  }, {
+      status: "Cancelados",
+      total: "#{number_to_currency(current_user.vouchers.where(status: 'Cancelado').sum(:total))}"
+  },{
+      status: "Aguardando pagamento",
+      total: "#{number_to_currency(current_user.vouchers.where(status: 'Aguardando Pagamento').sum(:total))}"
+  },{
+      status: "Em análise",
+      total: "#{number_to_currency(current_user.vouchers.where(status: 'Em análise').sum(:total))}"
+  }];
