--- a/app/views/admin/vouchers/_navbar.html.haml
+++ b/app/views/admin/vouchers/_navbar.html.haml
@@ -6,7 +6,7 @@
           %span.icon-bar
           %span.icon-bar
           %span.icon-bar
-        = link_to (yield :title), admin_vouchers_path, class: 'brand'
+        = link_to 'Vouchers', admin_vouchers_path, class: 'brand'
         .nav-collapse
           %ul.nav.pull-right
             %li.dropdown
