--- a/app/views/admin/leads/index.html.haml
+++ b/app/views/admin/leads/index.html.haml
@@ -10,7 +10,8 @@
     #collapseOne.accordion-body.collapse.in
       .accordion-inner
         = form_tag search_admin_leads_path, method: 'POST' do |f|
-          = select_tag 'scope', options_for_select([['Todos', 'created_at'], ['Pendentes', 'prospected_at'], ['Prospectados', 'prospected_at'], ['Matriculados', 'enrolled_at']]), id: 'scope'
+          = select_tag 'q[unity_franchise_id_eq]', options_from_collection_for_select(current_user.franchises, 'id', 'name'), :prompt => "Marca" if current_user.manager?
+          = select_tag 'scope', options_for_select([['Todos', 'created_at'], ['Pendentes', 'prospected_at'], ['Prospectados', 'prospected_at'], ['Matriculados', 'enrolled_at']]), :prompt => "Categoria", id: 'scope'
           .input-append.date{"data-date" => "12-02-2012", "data-date-format" => "dd/mm/yyyy"}
             %input.span2.date-mask{"size" => "16", "type" => "text", "name" => "q[created_at_gteq]", "placeholder" => "Data inicial", "value" => parse_datetime(params.try(:[], :q).try(:[], :created_at_gteq)), id: 'start_date'}
             %span.add-on
