--- a/app/views/admin/leads/_navbar.html.haml
+++ b/app/views/admin/leads/_navbar.html.haml
@@ -23,7 +23,7 @@
               %ul.dropdown-menu
                 %li
                   = link_to 'Marcar como prospectado', prospect_admin_leads_path, id: 'bulk_prospect', class: ['bulk_action']
-                  = link_to 'Marcar como matriculado', enroll_admin_leads_path, id: 'bulk_prospect', class: ['bulk_action']
+                  / = link_to 'Marcar como matriculado', enroll_admin_leads_path, id: 'bulk_prospect', class: ['bulk_action']
                 / %li.divider
                 / %li
                 /   = link_to 'Desmarcar como prospectado', prospect_admin_leads_path, id: 'bulk_prospect', class: ['bulk_action']
