--- a/app/views/home/subscribe.html.haml
+++ b/app/views/home/subscribe.html.haml
@@ -4,10 +4,10 @@
     = f.hidden_field :id
     #open-result
       #open-result-top
-        %span.text-result-medium 
-          Você escolheu a unidade
-          %strong= @unity.name
-        %p= @unity.address
+        / %span.text-result-medium 
+        /   Você escolheu a unidade
+        /   %strong= @unity.name
+        / %p= @unity.address
         %span.text-result-medium Qual o melhor horário para você estudar?
         %fieldset#period
         / - @timetables.each do |timetable|
