--- a/app/views/admin/vouchers/index.html.haml
+++ b/app/views/admin/vouchers/index.html.haml
@@ -3,11 +3,16 @@
 = render 'search'
 
 %p.btn-group.pull-right
-  = link_to 'Aprovados', admin_vouchers_path({q: params[:q] ? params[:q].merge({status_eq: 'Aprovado'}) : {status_eq: 'Aprovado'}}), class: ['btn', ('active' if params[:q] && params[:q].try(:[], :status_eq) == 'Aprovado')]
-  = link_to 'Em análise', admin_vouchers_path({q: params[:q] ? params[:q].merge({status_eq: 'Em análise'}) : {status_eq: 'Em análise'}}), class: ['btn', ('active' if params[:q] && params[:q].try(:[], :status_eq) == 'Em análise')]
-  = link_to 'Cancelados', admin_vouchers_path({q: params[:q] ? params[:q].merge({status_eq: 'Cancelados'}) : {status_eq: 'Cancelados'}}), class: ['btn', ('active' if params[:q] && params[:q].try(:[], :status_eq) == 'Cancelado')]
-  = link_to 'Aguardando pagamento', admin_vouchers_path({q: params[:q] ? params[:q].merge({status_eq: 'Aguardando Pagamento'}) : {status_eq: 'Aguardando Pagamento'}}), class: ['btn', ('active' if params[:q] && params[:q].try(:[], :status_eq) == 'Aguardando Pagamento')]
-  = link_to 'Todos', admin_vouchers_path, class: ['btn', ('active' if not params[:q])]
+  = link_to 'Aprovados', admin_vouchers_path(merge_search_params({status_eq: 'Aprovado'})), class: ['btn', ('active' if params[:active] and params[:active][:status_eq] == 'Aprovado')]
+  = link_to 'Em Análise', admin_vouchers_path(merge_search_params({status_eq: 'Em Análise'})), class: ['btn', ('active' if params[:q] && params[:q].try(:[], :status_eq) == 'Em Análise')]
+  = link_to 'Cancelados', admin_vouchers_path(merge_search_params({status_eq: 'Cancelado'})), class: ['btn', ('active' if params[:q] && params[:q].try(:[], :status_eq) == 'Cancelado')]
+  = link_to 'Aguardando pagamento', admin_vouchers_path(merge_search_params({status_eq: 'Aguardando Pagamento'})), class: ['btn', ('active' if params[:q] && params[:q].try(:[], :status_eq) == 'Aguardando Pagamento')]
+  = link_to 'Todos', admin_vouchers_path({}), class: ['btn', ('active' if not params[:active])]
+  / = link_to 'Aprovados', admin_vouchers_path({q: params[:q] ? params[:q].merge({status_eq: 'Aprovado'}) : {status_eq: 'Aprovado'}}), class: ['btn', ('active' if params[:q] && params[:q].try(:[], :status_eq) == 'Aprovado')]
+  / = link_to 'Em análise', admin_vouchers_path({q: params[:q] ? params[:q].merge({status_eq: 'Em análise'}) : {status_eq: 'Em análise'}}), class: ['btn', ('active' if params[:q] && params[:q].try(:[], :status_eq) == 'Em análise')]
+  / = link_to 'Cancelados', admin_vouchers_path({q: params[:q] ? params[:q].merge({status_eq: 'Cancelado'}) : {status_eq: 'Cancelado'}}), class: ['btn', ('active' if params[:q] && params[:q].try(:[], :status_eq) == 'Cancelado')]
+  / = link_to 'Aguardando pagamento', admin_vouchers_path({q: params[:q] ? params[:q].merge({status_eq: 'Aguardando Pagamento'}) : {status_eq: 'Aguardando Pagamento'}}), class: ['btn', ('active' if params[:q] && params[:q].try(:[], :status_eq) == 'Aguardando Pagamento')]
+  / = link_to 'Todos', admin_vouchers_path({q: {code_cont: params.try(:[], :q).try(:[], :code_cont)}}), class: ['btn', ('active' if not params.try(:[], :q).try(:[], :code_cont))]
 
 = page_entries_info @vouchers, entry_name: ''
 
